--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -26,12 +33,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hi\n"
+      "ollehhello\n"
      ]
     }
    ],
    "source": [
-    "user_input_string = input(\"Enter a String: \")\n"
+    "user_input_string = input(\"Enter a String: \")\n",
+    "reversed_string = \"\"\n",
+    "for char in user_input_string:\n",
+    "    #reversed_string = reversed_string + char   #It will return the same string\n",
+    "    reversed_string = char + reversed_string\n",
+    "print(reversed_string)\n"
    ]
   },
   {
