--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -21,6 +21,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Part 01 : The string in reverse order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Using Loop"
    ]
   },
@@ -83,6 +90,70 @@
     "user_input = input(\"Enter a string: \") # Hello Python\n",
     "reverse_string(user_input)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "part 02 : The number of vowels in the string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using For loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = input(\"Enter a string: \")\n",
+    "\n",
+    "for vowel in user_input_string.lower():\n",
+    "    #if vowel == [\"a\", \"e\" , \"i\" , \"o\" , \"u\"]:  this comparison is in between string and list, which will be false always.\n",
+    "    if vowel in [\"a\", \"e\" , \"i\" , \"o\" , \"u\"]:  # Use \"in\" keyword\n",
+    "        print(vowel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = input(\"Enter a string: \")\n",
+    "vowels = [\"a\", \"e\" , \"i\" , \"o\" , \"u\"]\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel in vowels:\n",
+    "        print(vowel)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
