--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ollehhello\n"
+      "olleh\n"
      ]
     }
    ],
@@ -148,6 +148,90 @@
     "for vowel in user_input_string:\n",
     "    if vowel in vowels:\n",
     "        print(vowel)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gnirts a'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_input_string = input(\"Enter a string: \")\n",
+    "def reversed_string(string):\n",
+    "    return string[::-1] # start, stop and step.. step of -1 will start from backward direction.\n",
+    "reversed_string(user_input_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vowels in the string:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = \"A string\"\n",
+    "def check_vowels(string):\n",
+    "    vowels = \"aeiouAEIOU\"\n",
+    "    return sum(1 for char in string if char in vowels)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "print(\"The vowels in the string: \" , check_vowels(user_input_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vowels:  A\n",
+      "Number of vowels: \n",
+      "Number of vowels: \n",
+      "Number of vowels: \n",
+      "Number of vowels: \n",
+      "Number of vowels: \n",
+      "vowels:  i\n",
+      "Number of vowels: \n",
+      "Number of vowels: \n",
+      "Number of vowels: \n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = \"A string\"\n",
+    "#Method 01\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel.lower() in ['a','e','i','o','u']:\n",
+    "        print(\"vowels: \" , vowel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question Number 02"
    ]
   },
   {
