--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,24 +207,20 @@
      "output_type": "stream",
      "text": [
       "vowels:  A\n",
-      "Number of vowels: \n",
-      "Number of vowels: \n",
-      "Number of vowels: \n",
-      "Number of vowels: \n",
-      "Number of vowels: \n",
       "vowels:  i\n",
-      "Number of vowels: \n",
-      "Number of vowels: \n",
-      "Number of vowels: \n"
+      "A string\n"
      ]
     }
    ],
    "source": [
     "user_input_string = \"A string\"\n",
     "#Method 01\n",
+    "sum_vowels = ''\n",
     "for vowel in user_input_string:\n",
     "    if vowel.lower() in ['a','e','i','o','u']:\n",
-    "        print(\"vowels: \" , vowel)"
+    "        print(\"vowels: \" , vowel)\n",
+    "    sum_vowels += vowel\n",
+    "print(sum_vowels)"
    ]
   },
   {
