--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
      "text": [
       "vowels:  A\n",
       "vowels:  i\n",
-      "A string\n"
+      "2\n"
      ]
     }
    ],
@@ -219,8 +219,66 @@
     "for vowel in user_input_string:\n",
     "    if vowel.lower() in ['a','e','i','o','u']:\n",
     "        print(\"vowels: \" , vowel)\n",
-    "    sum_vowels += vowel\n",
-    "print(sum_vowels)"
+    "        sum_vowels += vowel\n",
+    "print(len(sum_vowels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vowel: A\n",
+      "Vowel: i\n",
+      "Number of vowels: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = \"A string\"\n",
+    "\n",
+    "# Store only vowels\n",
+    "sum_vowels = ''\n",
+    "\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel.lower() in ['a', 'e', 'i', 'o', 'u']:\n",
+    "        print(\"Vowel:\", vowel)\n",
+    "        sum_vowels += vowel  # Append only vowels\n",
+    "\n",
+    "# Print the correct count of vowels\n",
+    "print(\"Number of vowels:\", len(sum_vowels))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vowels:  E\n",
+      "vowels:  e\n",
+      "vowels:  A\n",
+      "vowels:  i\n",
+      "Number of vowels:  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = \"Enter A string\"\n",
+    "#Method 01\n",
+    "sum_of_vowels = ''\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel.lower() in ['a','e','i','o','u']:\n",
+    "        print(\"vowels: \" , vowel)\n",
+    "        sum_of_vowels += vowel\n",
+    "print(\"Number of vowels: \", len(sum_of_vowels))"
    ]
   },
   {
@@ -234,6 +292,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Question no 01 : Part 01\n",
+    "#Reverse String\n",
+    "#Method 01 : Using Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_input_string = input(\"Enter a string: \")\n",
+    "def reversed_string(string):\n",
+    "    return string[::-1] # start, stop and step.. step of -1 will start from backward direction.\n",
+    "print(\"The reversed string is : \" ,reversed_string(user_input_string))\n",
+    "\n",
+    "#Method 02 : Using For loop\n",
+    "print(\"Reverse string using for loop: \")\n",
+    "reverse_user_string = ''\n",
+    "for char in user_input_string:\n",
+    "    reverse_user_string = char + reverse_user_string\n",
+    "print(f\"User reversed string is: {reverse_user_string}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#Question 01 : Part 02\n",
+    "#Numbers of vowels in the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Method 02\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel.lower() in \"aeiou\":\n",
+    "        print(\"The vowels: \" , vowel)\n",
+    "#Method 03 : Using a Function\n",
+    "def check_vowels(string):\n",
+    "    vowels = \"aeiouAEIOU\"\n",
+    "    return sum(1 for char in string if char in vowels)   \n",
+    "print(\"The vowels in the string: \" , check_vowels(user_input_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Method 02\n",
+    "for vowel in user_input_string:\n",
+    "    if vowel.lower() in \"aeiou\":\n",
+    "        print(\"The vowels: \" , vowel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 2: Hands-on Coding Project\n",
+    "Problem: Create a Python program that:\n",
+    "● Takes an input number from the user.\n",
+    "● Checks whether the number is even or odd.\n",
+    "● Prints the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is an odd number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "\n",
+    "def check_number(number):\n",
+    "    if number % 2 == 0:\n",
+    "        print(f\"{number} is an even number\")\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(f\"{number} is an odd number.\")\n",
+    "    \n",
+    "    \n",
+    "check_number(number)"
+   ]
   }
  ],
  "metadata": {
