--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -372,6 +372,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is an odd number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter a number: \"))\n",
+    "if number % 2 == 0:\n",
+    "    print(f\"{number} is an even number\")\n",
+    "        \n",
+    "else:\n",
+    "        \n",
+    "    print(f\"{number} is an odd number.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -398,6 +421,26 @@
     "    \n",
     "check_number(number)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 3: Virtual Environment Application\n",
+    "Problem: Create a Python program that:\n",
+    "1. Takes a list of integers as input.\n",
+    "2. Creates a new virtual environment called sortenv.\n",
+    "3. Installs a package (such as numpy) in the virtual environment.\n",
+    "4. Sorts the list using a numpy method (numpy.sort()).\n",
+    "5. Prints the sorted list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
