--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -437,10 +437,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['3 , 4 , 5 ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_list = list(input(\"Enter a list of integers: \"))\n",
+    "new_list = \"\"\n",
+    "for item in number_list:\n",
+    "    new_list += item + \" \"\n",
+    "print([new_list])"
+   ]
   }
  ],
  "metadata": {
