--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -437,23 +437,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['3 , 4 , 5 ']\n"
+      "['2']\n",
+      "['2', '3']\n",
+      "['2', '3', '4']\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "number_list = list(input(\"Enter a list of integers: \"))\n",
-    "new_list = \"\"\n",
+    "new_list = []\n",
     "for item in number_list:\n",
-    "    new_list += item + \" \"\n",
-    "print([new_list])"
+    "    new_list += item\n",
+    "    print(new_list)\n",
+    "\n",
+    "#numpy.sort()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1: Create a virtual environment using:\n",
+      " Python -m venv sortenv\n",
+      "Step 2: Activate the virtual envorinment\n",
+      " Windows: sortenv\\Scripts\\activate\n",
+      " macOS/Linux: source sortenv/bin/activate\n",
+      "Step 3: install NumPy in the virtual environment\n",
+      " pip install numpy\n",
+      "Step 4: Now, sorting the list using NumPy...\n",
+      "Sorted list:  [2 3 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing necessary library\n",
+    "# Function to sort the list\n",
+    "def sort_list(arr):\n",
+    "    return np.sort(arr)\n",
+    "# Simulating virtual environment setup\n",
+    "def setup_virtual_env():\n",
+    "    print('Step 1: Create a virtual environment using:')\n",
+    "    print(\" Python -m venv sortenv\")\n",
+    "    print('Step 2: Activate the virtual envorinment')\n",
+    "    print(' Windows: sortenv\\\\Scripts\\\\activate')\n",
+    "    print(' macOS/Linux: source sortenv/bin/activate')\n",
+    "    print('Step 3: install NumPy in the virtual environment')\n",
+    "    print(' pip install numpy')\n",
+    "    print('Step 4: Now, sorting the list using NumPy...')\n",
+    "# Taking user input as a list of integers\n",
+    "try:\n",
+    "    user_input = input('Enter a list of numbers separated by spaces: ')\n",
+    "    num_list = list(map(int,user_input.split()))\n",
+    "# Running virtual environment simulation\n",
+    "    setup_virtual_env()\n",
+    "# Sorting and displaying the sorted list\n",
+    "    print('Sorted list: ',sort_list(num_list))\n",
+    "except ValueError:\n",
+    "    print('Invalid input! Please enter a list of integers.')\n",
+    "# _run_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create virtual environment by running this command: \n",
+      "conda create -n sortenv pythoun==3.12 \n",
+      "Activate Environment: \n",
+      "conda activate sortenv\n",
+      "Install Python library: Numpy\n",
+      "!pip install numpy as np\n",
+      "Sorted list:  [2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Virtual environment setup\n",
+    "def setup_virtual_environment():\n",
+    "    print(\"Create virtual environment using anaconda by running this command: \")\n",
+    "    print(\"conda create -n sortenv pythoun==3.12 \")\n",
+    "    print(\"Activate Environment: \")\n",
+    "    print(\"conda activate sortenv\")\n",
+    "    print(\"Install Python library: Numpy\")\n",
+    "    print(\"!pip install numpy as np\")\n",
+    "\n",
+    "#Sorting array\n",
+    "def sort_list(arr):\n",
+    "    return np.sort(arr)\n",
+    "\n",
+    "#Taking input from user\n",
+    "\n",
+    "try:\n",
+    "    user_input = input(\"Enter a list of integers seperated by space: \")\n",
+    "    num_list = list(map(int, user_input.split()))\n",
+    "    setup_virtual_environment()\n",
+    "    print(\"Sorted list: \" , sort_list(num_list))\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input!\")"
    ]
   }
  ],
