--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -18,6 +18,59 @@
     "4. Check if the integer is even or odd and print the result.\n",
     "5. Multiply the float by 2 and print the result."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given string in uppercase: FDHDFH\n",
+      "45 is an odd number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#String\n",
+    "user_input_string = input(\"Enter a string: \")\n",
+    "#Converting it to uppercase\n",
+    "print(\"Given string in uppercase:\" , user_input_string.upper())\n",
+    "\n",
+    "#For Integer\n",
+    "user_input_integer = int(input(\"Enter an Integer: \"))\n",
+    "if user_input_integer % 2 == 0:\n",
+    "    print(f\"{user_input_integer} is an even number.\")\n",
+    "else:\n",
+    "    print(f\"{user_input_integer} is an odd number.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 is an even number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_integer = int(input(\"Enter an Integer: \"))\n",
+    "def number_check(number):\n",
+    "    if number % 2 == 0:\n",
+    "        print(f\"{number} is an even number.\")\n",
+    "    else:\n",
+    "        print(f\"{number} is an odd number.\")\n",
+    "\n",
+    "number_check(user_input_integer)"
+   ]
   }
  ],
  "metadata": {
