--- a/Python_Assignment_01.ipynb
+++ b/Python_Assignment_01.ipynb
@@ -21,6 +21,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#For Float\n",
+    "user_input_float = float(input(\"Enter a float: \"))\n",
+    "\n",
+    "def float_multiply(num):\n",
+    "    return num*2\n",
+    "\n",
+    "\n",
+    "float_multiply(user_input_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -70,6 +97,77 @@
     "        print(f\"{number} is an odd number.\")\n",
     "\n",
     "number_check(user_input_integer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_bool = bool(input(\"Enter a bool: \"))\n",
+    "try:\n",
+    "    user_input_bool = bool(input(\"Enter a bool: \"))\n",
+    "    print(user_input_bool)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given string: dhfsggf\n",
+      "Given Integer Value: 344\n",
+      "Given Boolean Value: True\n",
+      "Given Float Value: 4.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_string = input(\"Enter a string: \")\n",
+    "\n",
+    "user_input_integer = int(input(\"Enter an Integer: \"))\n",
+    "\n",
+    "user_input_bool = bool(input(\"Enter a bool: \"))\n",
+    "\n",
+    "user_input_float = float(input(\"Enter a float: \"))\n",
+    "\n",
+    "print(\"Given string:\" , user_input_string)\n",
+    "print(\"Given Integer Value:\" , user_input_integer)\n",
+    "print(\"Given Boolean Value:\" , user_input_bool)\n",
+    "print(\"Given Float Value:\" , user_input_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given Boolean Value: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input_bool = bool(input(\"Enter a bool: \"))\n",
+    "print(\"Given Boolean Value:\" , user_input_bool)"
    ]
   }
  ],
