--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -169,6 +169,21 @@
     "user_input_bool = bool(input(\"Enter a bool: \"))\n",
     "print(\"Given Boolean Value:\" , user_input_bool)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 2: Operators\n",
+    "Problem: Write a Python program that:\n",
+    "1. Accepts two numbers as input from the user.\n",
+    "2. Performs and prints the result of all the arithmetic operations(addition, subtraction, \n",
+    "multiplication, division, modulus, flow division) between these two numbers.\n",
+    "3. Use comparison operators to check if the first number is greater than the second, and if they \n",
+    "are equal.\n",
+    "4. Use logical operatorsto combine two conditions (e.g., the first number is greater than the \n",
+    "second, and the second number is less than 10)"
+   ]
   }
  ],
  "metadata": {
