--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -184,6 +184,17 @@
     "4. Use logical operatorsto combine two conditions (e.g., the first number is greater than the \n",
     "second, and the second number is less than 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. Accepts two numbers as input from the user.\n",
+    "\n",
+    "numbers = input(\"Enter numbers: \")"
+   ]
   }
  ],
  "metadata": {
