--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -195,6 +195,23 @@
     "\n",
     "numbers = input(\"Enter numbers: \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\")"
+   ]
   }
  ],
  "metadata": {
