--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -212,6 +212,28 @@
    "source": [
     "print(\"Hello\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_numbers(num1 , num2):\n",
+    "    add = num1 + num2\n",
+    "    return add\n",
+    "\n",
+    "#numbers = sum()\n",
+    "print(sum_numbers(2,3))"
+   ]
   }
  ],
  "metadata": {
