--- a/Python_Assignment.ipynb
+++ b/Python_Assignment.ipynb
@@ -234,6 +234,28 @@
     "#numbers = sum()\n",
     "print(sum_numbers(2,3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red blue pink orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Unpacking\n",
+    "\n",
+    "color_list = [\"red\" , \"blue\" , \"pink\" , \"orange\"]\n",
+    "\n",
+    "x,y,z,z2 = color_list\n",
+    "print(x,y,z,z2)"
+   ]
   }
  ],
  "metadata": {
